--- a/04/02/index.html
+++ b/04/02/index.html
@@ -3,19 +3,82 @@
 <head>
     <meta charset="utf-8">
     <title>Задание 2</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Пустая страница, в ней создать 2 таблицы. Первая, таблица продуктов(Название продукта, Происхождение, Белки, Жиры, Углеводы):</h1>
-<ul>
-    <li> 5 ячеек в строке равной ширины </li>
-    <li> Если контент не вмещается в ячейку, она не раздвигается, в колонке Название продукта контент в одну строку и скрывается с точками, в колонке Происхождение контент становится многострочным. </li>
-    <li> Фон рядов должен чередоваться </li>
-    <li> По наведению на ряд фон должен меняться </li>
-    <li> Бордеров быть вообще не должно </li>
-    <li> Thead с нижним бордером и цветным фоном </li>
-</ul>
-
-<h1> Вторая, как на картинке, отступ между ячейками 8px</h1>
-<image src="https://habrastorage.org/webt/59/e3/06/59e306153cd88184926845.png"></image>
-</body>
-</html>
+<table class="example1">
+    <thead>
+        <tr>
+            <th>Название продукта</th>
+            <th>Происхождение</th>
+            <th>Белки</th>
+            <th>Жиры</th>
+            <th>Углеводы</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Мороженое</td>
+            <td>Великий Устюг</td>
+            <td>70</td>
+            <td>40</td>
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>Шоколадка</td>
+            <td>Северная Америка</td>
+            <td>50</td>
+            <td>50</td>
+            <td>100</td>
+        </tr>
+        <tr>
+            <td>Чай</td>
+            <td>Китай/Индия</td>
+            <td>0</td>
+            <td>0</td>
+            <td>1</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+<br>
+<br>
+<table class="example2">
+    <tbody>
+        <tr>
+            <td>This</td>
+            <td>Little</td>
+            <td>Piggy</td>
+            <td>Went</td>
+            <td>To</td>
+            <td>Market</td>
+        </tr>
+        <tr>
+            <td colspan="2">This</td>
+            <td>Little</td>
+            <td>Piggy</td>
+            <td>Went</td>
+            <td>To</td>
+        </tr>
+        <tr>
+            <td colspan="3">This</td>
+            <td rowspan="3">Little</td>
+            <td>Piggy</td>
+            <td>Went</td>
+        </tr>
+        <tr>
+            <td rowspan="2">This</td>
+            <td>Little</td>
+            <td>Piggy</td>
+            <td>Went</td>
+            <td>To</td>
+        </tr>
+        <tr>
+            <td>Little</td>
+            <td>Piggy</td>
+            <td>Went</td>
+            <td>To</td>
+        </tr>
+    </tbody>
+</table>
