--- a/04/03/index.html
+++ b/04/03/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+    <link rel="stylesheet" href="style.css">
     <title>Задание 3</title>
 </head>
 <body>
-<h1>Создать ненумерованный список, и внутри одного элемента - нумерованный список:</h1>
 <ul>
-    <li> У ненумерованного списка `точки` должны быть желтого цвета </li>
-    <li> У нумерованного числа - синего </li>
+    <li>Музыка</li>
+    <li>Погода
+        <ol>
+            <li>Хорошая</li>
+            <li>Плохая</li>
+        </ol>
+    </li>
 </ul>
 </body>
 </html>
