first task from 05 in progress

--- a/05/01/index.html
+++ b/05/01/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Задание 5.1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Сверстать блок меню как на картинке. Pixel-perfect.</h1>
-<p>
-    Подробности по ссылке:
-    <a href="https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333">
-        https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333
-    </a>, для того чтобы получить доступ, нужно зарегестрироваться на
-    <a href="https://zeplin.io/">zeplin.io</a>, и попросить доступ у Евгения Мамаева.
-</p>
-<img src="./task.png" alt="">
+<ul class="menu-container">
+    <li><a href="#карты">карты</a></li>
+    <li><a href="#вклады">вклады</a></li>
+    <li><a href="#платежи и переводы">платежи и переводы</a></li>
+    <li><a href="#бонусы">бонусы</a></li>
+    <li><a href="#страхование">страхование</a></li>
+    <li><a href="#о банке">о банке</a></li>
+</ul>
 </body>
 </html>
