first task done

--- a/05/01/index.html
+++ b/05/01/index.html
@@ -4,15 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Задание 5.1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
 <ul class="menu-container">
-    <li><a href="#карты">карты</a></li>
-    <li><a href="#вклады">вклады</a></li>
-    <li><a href="#платежи и переводы">платежи и переводы</a></li>
-    <li><a href="#бонусы">бонусы</a></li>
-    <li><a href="#страхование">страхование</a></li>
-    <li><a href="#о банке">о банке</a></li>
+    <li class="li-block"><a href="#карты">карты</a></li>
+    <li class="li-block"><a href="#вклады">вклады</a></li>
+    <li class="li-block"><a href="#платежи и переводы">платежи и переводы</a></li>
+    <li class="li-block"><a href="#бонусы">бонусы</a></li>
+    <li class="li-block"><a href="#страхование">страхование</a></li>
+    <li class="li-block"><a href="#о банке">о банке</a></li>
 </ul>
 </body>
 </html>
