--- a/05/01/index.html
+++ b/05/01/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 <ul class="menu-container">
-    <li class="li-block"><a href="#карты">карты</a></li>
-    <li class="li-block"><a href="#вклады">вклады</a></li>
-    <li class="li-block"><a href="#платежи и переводы">платежи и переводы</a></li>
-    <li class="li-block"><a href="#бонусы">бонусы</a></li>
-    <li class="li-block"><a href="#страхование">страхование</a></li>
-    <li class="li-block"><a href="#о банке">о банке</a></li>
+    <li class="li-block"><a href="#карты" class="li-content">карты</a></li>
+    <li class="li-block"><a href="#вклады" class="li-content">вклады</a></li>
+    <li class="li-block"><a href="#платежи и переводы" class="li-content">платежи и переводы</a></li>
+    <li class="li-block"><a href="#бонусы" class="li-content">бонусы</a></li>
+    <li class="li-block"><a href="#страхование" class="li-content">страхование</a></li>
+    <li class="li-block"><a href="#о банке" class="li-content">о банке</a></li>
 </ul>
+<img src="./task.png" alt="">
 </body>
 </html>
