--- a/05/03/index.html
+++ b/05/03/index.html
@@ -2,17 +2,58 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet" >
     <title>Задание 5.3</title>
 </head>
 <body>
-<h1>Сделать тэги. Pixel-perfect.</h1>
-<p>
-    Подробности по ссылке:
-    <a href="https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333">
-        https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333
-    </a>, для того чтобы получить доступ, нужно зарегестрироваться на
-    <a href="https://zeplin.io/">zeplin.io</a>, и попросить доступ у Евгения Мамаева.
-</p>
-<img src="./task.png" alt="">
+<div class="main-tag-container" contenteditable="false">
+    <span class="tag-container">
+        <text class="tag-content">Кафе</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">Интернет</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">Телефон</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">Авто</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">ЖКХ</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">Одежда и обувь</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" contenteditable="false">
+        <text class="tag-content">Супермаркеты, гастрономы, универмаги и ещё что-то там</text>
+        <img src="img/group-copy-2.png"
+             srcset="img/group-copy-2@2x.png 2x,
+             img/group-copy-2@3x.png 3x" class="Group-Copy">
+    </span>
+    <span class="tag-container" style="background: none" contenteditable="true">
+    </span>
+</div>
+<img src="./task.png" alt="" class="task-image">
 </body>
 </html>
