--- a/05/01/index.html
+++ b/05/01/index.html
@@ -15,6 +15,6 @@
     <li class="li-block"><a href="#страхование" class="li-content">страхование</a></li>
     <li class="li-block"><a href="#о банке" class="li-content">о банке</a></li>
 </ul>
-<img src="./task.png" alt="">
+<!--<img src="./task.png" alt="">-->
 </body>
 </html>
