--- a/05/02/index.html
+++ b/05/02/index.html
@@ -23,6 +23,6 @@
         <form class="last-block-container"><text class="last-block-content">Оформить заявку</text></form>
     </div>
 </div>
-<img src="./task.png" alt="" class="task-image">
+<!--<img src="./task.png" alt="" class="task-image">-->
 </body>
 </html>
