--- a/05/03/index.html
+++ b/05/03/index.html
@@ -54,6 +54,6 @@
     <span class="tag-container" style="background: none" contenteditable="true">
     </span>
 </div>
-<img src="./task.png" alt="" class="task-image">
+<!--<img src="./task.png" alt="" class="task-image">-->
 </body>
 </html>
