--- a/05/01/index.html
+++ b/05/01/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Задание 5.1</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
-<h1>Сверстать блок меню как на картинке. Pixel-perfect.</h1>
-<p>
-    Подробности по ссылке:
-    <a href="https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333">
-        https://app.zeplin.io/project/58a307271a9f6d513890adc8/screen/58a3075a4ec334e848d7f333
-    </a>, для того чтобы получить доступ, нужно зарегестрироваться на
-    <a href="https://zeplin.io/">zeplin.io</a>, и попросить доступ у Евгения Мамаева.
-</p>
-<img src="./task.png" alt="">
+<nav>
+    <ul class="menu-container">
+        <li class="li-block"><a href="#карты" class="li-content">карты</a></li>
+        <li class="li-block"><a href="#вклады" class="li-content">вклады</a></li>
+        <li class="li-block"><a href="#платежи и переводы" class="li-content">платежи и переводы</a></li>
+        <li class="li-block"><a href="#бонусы" class="li-content">бонусы</a></li>
+        <li class="li-block"><a href="#страхование" class="li-content">страхование</a></li>
+        <li class="li-block"><a href="#о банке" class="li-content">о банке</a></li>
+    </ul>
+</nav>
+<!--<img src="./task.png" alt="">-->
 </body>
 </html>
