--- a/06/index.html
+++ b/06/index.html
@@ -4,11 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Задание 5.1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- <link rel="stylesheet/less" type="text.css" href="style.less"> -->
+    <!-- <link rel="stylesheet/less" type="text/css" href="style.less"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,300&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 </head>
 <body>
+<!-- menu -->
 <ul class="nav">
     <li class="nav__item"><a href="#карты">карты</a></li>
     <li class="nav__item"><a href="#вклады">вклады</a></li>
@@ -17,18 +18,87 @@
     <li class="nav__item"><a href="#страхование">страхование</a></li>
     <li class="nav__item"><a href="#о банке">о банке</a></li>
 </ul>
+<!-- banner -->
 <div class="banner">
     <div class="banner__card-img-container"/></div>
-    <div class="banner__content-container">
-        <h1>Карты для&nbsp;вас прямо&nbsp;сейчас</h1>
-        <p>Выбирайте карту, пользуйтесь<br>удобными&nbsp;сервисами</p>
-        <button type="button">Оформить заявку</button>
+<div class="banner__content-container">
+    <h1>Карты для&nbsp;вас прямо&nbsp;сейчас</h1>
+    <p>Выбирайте карту, пользуйтесь</br>удобными&nbsp;сервисами</p>
+    <button type="button">Оформить заявку</button>
+</div>
+</div>
+<!-- tags -->
+<div class="tags">
+    <h2 class="tags__title">Любые категории&nbsp;платежей</h2>
+    <div class="tags__container">
+      <span class="tags__content">
+          <text>Кафе</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+            class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>Интернет</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>Телефон</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>Авто</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>ЖКХ</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>Одежда и обувь</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tags__content" contenteditable="false">
+          <text>Супермаркеты, гастрономы, универмаги и ещё что-то там</text>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11"
+               class="delete-svg">
+            <g fill="none" fill-rule="evenodd" stroke="#74A3C7" stroke-linecap="square">
+                <path d="M.851.128l9.9 9.9M10.872.128l-9.9 9.9"/>
+            </g>
+          </svg>
+      </span>
+        <span class="tag-container" style="background: none" contenteditable="true">
+      </span>
     </div>
 </div>
-<div class="headers">
-    <h2 class="headers__title">Любые категории&nbsp;платежей<h2>
-
-</div>
+<!--<img src="./task.png" alt="" class="task-image">-->
 <!--<img src="./task.png" alt="">-->
 </body>
 </html>
