--- a/07/01/index.html
+++ b/07/01/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet/less" type="text/css" href="./main.less" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
-    <script src="./main.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
+
     <title>Задание 7.1</title>
 </head>
 <body>
@@ -14,13 +14,15 @@
     <br>
     <code>+ 7 (_ _ _) - _ _ _ - _ _ - _ _</code>.
     <br>
-    <input value="+7(988)-777-55-33">
+    <input id="phone" type="tel" value="+7(988)-777-55-33" data-mask="+7 (___)-___- __-__">
     <br>
     Сделать обновление адреса и названия ссылки для звонка при изменении телефона в инпуте:
     <br>
     <a href="tel:+79887775533">Позвонить на +7(988)-777-55-33</a>
+
     <br>
     Отстилить интерфейс по своему усмотрению.
 </p>
+<script src="./main.js" ></script>
 </body>
 </html>
