--- a/07/02/index.html
+++ b/07/02/index.html
@@ -3,24 +3,17 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet/less" type="text/css" href="./main.less" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
-    <script src="./main.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
     <title>Задание 7.2</title>
 </head>
 <body>
 <h1>Обработка двойного клика </h1>
-<p>
-    Реализуйте функцию doubleClick(element, doubleClickHandler, timeDistance), которая обрабатывает
-    клики с помощью переданной вторым аргументом функции - обработчика, два последовательных клика считаются двойным,
-    если время между соответсвующими событиями меньше чем timeDistance(в миллисекундах).
-    <br>
-    Навесте обработчик на кнопку и добаляте элеметы в случае клика в список ниже:
-    <button>clike me</button>
-    <ol>
+    <button class="btn-click-me">click me</button>
+    <ol class="check-list">
         <li>2xClick - Fri Nov 03 2017 17:17:33 </li>
         <li>2xClick - Fri Nov 03 2017 17:17:35 </li>
     </ol>
-    Дизайн страницы - на ваш вкус.
 </p>
+<script src="main.js" ></script>
 </body>
 </html>
