task 4 in  progress

--- a/07/01/index.html
+++ b/07/01/index.html
@@ -14,7 +14,7 @@
     <br>
     <code>+ 7 (_ _ _) - _ _ _ - _ _ - _ _</code>.
     <br>
-    <input id="phone" type="tel" value="+7(988)-777-55-33" data-mask="+7 (___)-___- __-__">
+    <input id="phone" type="tel" value="+ 7 (___) - ___ - __ - __" data-mask="+7 (___)-___- __-__">
     <br>
     Сделать обновление адреса и названия ссылки для звонка при изменении телефона в инпуте:
     <br>
