--- a/07/04/index.html
+++ b/07/04/index.html
@@ -3,22 +3,29 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet/less" type="text/css" href="./main.less" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
-    <script src="./main.js" ></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js" ></script>
     <title>Задание 7.4</title>
 </head>
 <body>
 <h1>Скроллинг с подгрузкой</h1>
-<p>
-    Реализовать скроллинг с подргузкой содержимого при достижении нижней части страницы.
-
-    В качестве источника содержимого используйте github и список репозиториев facebook.
-    Для того, чтобы поиграться с API и возвращаемым содержимым, в консоли можете использовать следующие утилиты httpie и jq:
-    <br>
-    <code>http -p b "https://api.github.com/orgs/facebook/repos?page=1" | jq 'length'</code>
-    <br>
-    Нужно выводить список репозиториев (для каждого название, описание, ссылку, дату создания и дату последнего коммита).
-    Дизайн страницы - на ваш вкус.
-</p>
+    <div class="container">
+        <ul class="list"></ul>
+    </div>
+    <template id="repoTemplate" style="display: none">
+        <li class="list__item repo">
+            <div class="repo-field-wrapper">
+                <label for="repo__name">Repo name:</label>
+                <div class="repo__name" id="repo__name"></div>
+            </div>
+            <div class="repo-field-wrapper">
+                <label for="repo__description">Description:</label>
+                <div class="repo__description" id="repo__description"></div>
+            </div>
+            <a class="repo__html_url" href=""></a>
+            <div class="repo__created_at"></div>
+            <div class="repo__updated_at"></div>
+        </li>
+    </template>
+<script src="main.js"></script>
 </body>
 </html>
