--- a/07/02/index.html
+++ b/07/02/index.html
@@ -7,12 +7,13 @@
     <title>Задание 7.2</title>
 </head>
 <body>
-<h1>Обработка двойного клика </h1>
-    <button class="btn-click-me">click me</button>
-    <ol class="check-list">
-        <li>2xClick - Fri Nov 03 2017 17:17:33 </li>
-        <li>2xClick - Fri Nov 03 2017 17:17:35 </li>
-    </ol>
+    <div class="content-wrapper">
+        <h1>Обработка двойного клика </h1>
+        <button class="btn-click-me">Click me!</button>
+        <ol class="check-list">
+            <li class="check-list__item">2xClick - Fri Nov 03 2017 17:17:33 </li>
+        </ol>
+    </div>
 </p>
 <script src="main.js" ></script>
 </body>
