--- a/07/04/index.html
+++ b/07/04/index.html
@@ -14,16 +14,25 @@
     <template id="repoTemplate" style="display: none">
         <li class="list__item repo">
             <div class="repo-field-wrapper">
-                <label for="repo__name">Repo name:</label>
-                <div class="repo__name" id="repo__name"></div>
+                <label for="repo__name"><b>Имя репозитория:</b></label>
+                <div class="repo__name block" id="repo__name"></div>
             </div>
             <div class="repo-field-wrapper">
-                <label for="repo__description">Description:</label>
-                <div class="repo__description" id="repo__description"></div>
+                <label for="repo__description"><b>Описание:</b></label>
+                <div class="repo__description block" id="repo__description"></div>
             </div>
-            <a class="repo__html_url" href=""></a>
-            <div class="repo__created_at"></div>
-            <div class="repo__updated_at"></div>
+            <div class="repo-field-wrapper">
+                <label for="repo__html_url"><b>Ссылка на репозиторий:</b></label>
+                <a class="repo__html_url block" href="" id="repo__html_url"></a>
+            </div>
+            <div class="repo-field-wrapper">
+                <label for="repo__created_at"><b>Дата создания:</b></label>
+                <div class="repo__created_at block" id="repo__created_at"></div>
+            </div>
+            <div  class="repo-field-wrapper">
+                <label for="repo__updated_at"><b>Дата последнего коммита:</b></label>
+                <div class="repo__updated_at block" id="repo__updated_at"></div>
+            </div>
         </li>
     </template>
 <script src="main.js"></script>
